UPDATE: Adequação das services e controllers para novo metodo de listagem por tempo determinado